--- a/_posts/2015-04-03-groovy.md
+++ b/_posts/2015-04-03-groovy.md
@@ -9,7 +9,7 @@ date: 2015-04-03 16:35:07
 
 #### Setup
 
-1) Add the pippo-groovy dependency to your pom.xml:
+1) Add the `pippo-groovy` dependency to your `pom.xml`:
 
 ```xml
 <dependency>
@@ -20,7 +20,7 @@ date: 2015-04-03 16:35:07
 ```
 
 2)  Start writing [Groovy MarkupTemplateEngine][groovy] templates in the `templates` folder of your application.  
-**Note:** The default file extension of a Groovy template is `.groovy` and may be ommitted from your Pippo Java code but <u>not</u> your templates.
+**Note:** The default file extension of a Groovy template is `.groovy` and may be omitted from your Pippo Java code but <u>not</u> your templates.
 
 #### Integration
 
@@ -42,7 +42,7 @@ i18n("key.name", "arg1", "arg2")
 
 ##### prettytime (relative time)
 
-pippo-groovy supports automatically localized [prettytime][prettytime] out-of-the-box and it is very easy to use.
+Teh `pippo-groovy` module supports automatically localized [prettytime][prettytime] out-of-the-box and it is very easy to use.
 
 Assuming you are providing a `java.util.Date` instance to prettyTime...
 
@@ -73,7 +73,7 @@ formatTime(now, "dd-MM-yyyy HH:mm")
 
 ##### webjarsAt & publicAt
 
-pippo-groovy supports context-aware url generation for your classpath resources using the `webjarsAt` and `publicAt` methods.
+The `pippo-groovy` module supports context-aware url generation for your classpath resources using the `webjarsAt` and `publicAt` methods.
 
 ```html
 // Stylesheets
@@ -106,7 +106,7 @@ public class MyApplication extends Application {
 
 ##### AngularJS
 
-pippo-groovy comes with out-of-the-box support for the following syntax:
+The `pippo-groovy` module comes with out-of-the-box support for the following syntax:
 
 ```
 ng("something | or | other")
@@ -116,8 +116,8 @@ The string passed to '`ng` will produce `{% raw %}{{something | or | other}}{% e
 
 ##### Error Templates
 
-pippo-groovy will render special templates for routing problems and exceptions.  You may override these templates 
-within your own application.
+The `pippo-groovy` module will render special templates for routing problems and exceptions. 
+You may override these templates within your own application (put a file with the same name, to same location, in your application classpath)
 
 - `templates/pippo/404notFound.groovy`
 - `templates/pippo/500interalError.groovy`
