--- a/_posts/2015-04-03-jade.md
+++ b/_posts/2015-04-03-jade.md
@@ -9,7 +9,7 @@ date: 2015-04-03 15:56:02
 
 #### Setup
 
-1) Add the pippo-jade dependency to your pom.xml:
+1) Add the `pippo-jade` dependency to your `pom.xml`:
 
 ```xml
 <dependency>
@@ -43,7 +43,7 @@ pippo.i18n("key.name", "arg1", "arg2")
 
 ##### prettytime (relative time)
 
-pippo-jade supports automatically localized [prettytime][prettytime] out-of-the-box and it is very easy to use.
+The `pippo-jade` supports automatically localized [prettytime][prettytime] out-of-the-box and it is very easy to use.
 
 Assuming you are providing a `java.util.Date` instance to prettyTime...
 
@@ -74,7 +74,7 @@ pippo.formatTime(now, "dd-MM-yyyy HH:mm")
 
 ##### webjarsAt & publicAt
 
-pippo-jade supports context-aware url generation for your classpath resources using the `webjarsAt` and `publicAt` methods.
+The `pippo-jade` module supports context-aware url generation for your classpath resources using the `webjarsAt` and `publicAt` methods.
 
 ```html
 // Stylesheets
@@ -98,7 +98,8 @@ public class MyApplication extends Application {
         // add routes for static content
         addPublicResourceRoute();
         addWebjarsResourceRoute();
-        ...
+        
+        // add other routes
     }
     
 }
@@ -106,8 +107,8 @@ public class MyApplication extends Application {
 
 ##### Error Templates
 
-pippo-jade will render special templates for routing problems and excepions.  You may override these templates 
-within your own application.
+The `pippo-jade` module will render special templates for routing problems and exceptions. 
+You may override these templates within your own application (put a file with the same name, to same location, in your application classpath)
 
 - `templates/pippo/404notFound.jade`
 - `templates/pippo/500interalError.jade`
