--- a/_posts/2015-04-03-pebble.md
+++ b/_posts/2015-04-03-pebble.md
@@ -9,7 +9,7 @@ date: 2015-04-03 16:35:34
 
 #### Setup
 
-1) Add the pippo-pebble dependency to your pom.xml:
+1) Add the `pippo-pebble` dependency to your `pom.xml`:
 
 ```xml
 <dependency>
@@ -20,7 +20,7 @@ date: 2015-04-03 16:35:34
 ```
 
 2)  Start writing [Pebble][pebble] templates in the `templates` folder of your application.  
-**Note:** The default file extension of a Pebble template is `.peb` and it has to be ommitted from your templates and your Pippo Java code. The default location (=base path) of the template files is `src/main/resources/templates`. If you use template inheritance or partial templates then you have to omit the base path! Currently the default extension of Pebble templates cannot be changed.
+**Note:** The default file extension of a Pebble template is `.peb` and it has to be omitted from your templates and your Pippo Java code. The default location (=base path) of the template files is `src/main/resources/templates`. If you use template inheritance or partial templates then you have to omit the base path! Currently the default extension of Pebble templates cannot be changed.
 
 #### Integration
 
@@ -42,7 +42,7 @@ You can supply arguments to your *MessageFormat* translation resources too.
 
 ##### prettytime (relative time)
 
-pippo-pebble supports automatically localized [prettytime][prettytime] out-of-the-box and it is very easy to use.
+The `pippo-pebble` module supports automatically localized [prettytime][prettytime] out-of-the-box and it is very easy to use.
 
 Assuming you are providing a `java.util.Date` instance to prettyTime...
 
@@ -75,7 +75,7 @@ You can also automatically format localized dates using standard Java date forma
 
 ##### webjarsAt & publicAt
 
-pippo-pebble supports context-aware url generation for your classpath resources using the `webjarsAt` and `publicAt` extensions.
+The `pippo-pebble` module supports context-aware url generation for your classpath resources using the `webjarsAt` and `publicAt` extensions.
 
 ```html
 {% raw %}
@@ -112,7 +112,7 @@ public class MyApplication extends Application {
 
 Pebble and AngularJS both use the double-brace notation.
 
-pippo-pebble comes with out-of-the-box support for the following syntax:
+The `pippo-pebble` module comes with out-of-the-box support for the following syntax:
 
 ```
 {% raw %}
@@ -124,8 +124,8 @@ Anything after the `ng` will be re-injected into the template during the compila
 
 ##### Error Templates
 
-pippo-pebble will render special templates for routing problems and excepions.  You may override these templates 
-within your own application.
+The `pippo-pebble` module will render special templates for routing problems and exceptions. 
+You may override these templates within your own application.
 
 - `templates/pippo/404notFound.peb`
 - `templates/pippo/500interalError.peb`
