--- a/_posts/2015-04-03-trimou.md
+++ b/_posts/2015-04-03-trimou.md
@@ -9,7 +9,7 @@ date: 2015-04-03 16:35:19
 
 #### Setup
 
-1) Add the pippo-trimou dependency to your pom.xml:
+1) Add the `pippo-trimou` dependency to your `pom.xml`:
 
 ```xml
 <dependency>
@@ -20,7 +20,7 @@ date: 2015-04-03 16:35:19
 ```
 
 2)  Start writing [Mustache][mustache] templates in the `templates` folder of your application.  You may want to review the [Trimou docs](http://trimou.org/doc/latest.html) for any non-standard syntax notes.  
-**Note:** The default file extension of a Trimou template is `.mustache` and it may be ommitted from your templates and your Pippo Java code.
+**Note:** The default file extension of a Trimou template is `.mustache` and it may be omitted from your templates and your Pippo Java code.
 
 #### Integration
 
@@ -46,7 +46,7 @@ You can supply arguments to your *MessageFormat* translation resources too.
 
 ##### prettytime (relative time)
 
-pippo-trimou supports automatically localized [prettytime][prettytime] out-of-the-box and it is very easy to use.
+The `pippo-trimou` supports automatically localized [prettytime][prettytime] out-of-the-box and it is very easy to use.
 
 Assuming you are providing a `java.util.Date` instance to prettyTime...
 
@@ -80,7 +80,7 @@ You can also automatically format localized dates using standard Java date forma
 
 ##### webjarsAt & publicAt
 
-pippo-trimou supports context-aware url generation for your classpath resources using the `webjarsAt` and `publicAt` helpers.
+The `pippo-trimou` module supports context-aware url generation for your classpath resources using the `webjarsAt` and `publicAt` helpers.
 
 ```html
 {% raw %}
@@ -101,9 +101,9 @@ pippo-trimou supports context-aware url generation for your classpath resources 
 ```java
 public class MyApplication extends Application {
 
-	@Override
+    @Override
     protected void onInit() {
-		// add routes for static content
+        // add routes for static content
         addPublicResourceRoute();
         addWebjarsResourceRoute();
         
@@ -115,9 +115,9 @@ public class MyApplication extends Application {
 
 ##### AngularJS
 
-Mustache and AngularJS both use the double-brace notation.  There are several options on how to use both technologies together as outlined [here](https://github.com/trimou/trimou/wiki/How-to-render-a-template-with-braces-delimiters).
+Mustache and AngularJS both use the double-brace notation. There are several options on how to use both technologies together as outlined [here](https://github.com/trimou/trimou/wiki/How-to-render-a-template-with-braces-delimiters).
 
-pippo-trimou comes with out-of-the-box support for the following syntax:
+The `pippo-trimou` module comes with out-of-the-box support for the following syntax:
 
 ```
 {% raw %}
@@ -129,8 +129,8 @@ Anything after the `ng` will be re-injected into the template during the compila
 
 ##### Error Templates
 
-pippo-trimou will render special templates for routing problems and excepions.  You may override these templates 
-within your own application.
+The `pippo-trimou` module will render special templates for routing problems and exceptions.
+You may override these templates within your own application (put a file with the same name, to same location, in your application classpath)
 
 - `templates/pippo/404notFound.mustache`
 - `templates/pippo/500interalError.mustache`
