Improve Server section

--- a/_posts/2015-03-17-server.md
+++ b/_posts/2015-03-17-server.md
@@ -6,6 +6,8 @@ date: 2015-03-17 17:34:27
 order: 30
 ---
 
+First of all it's important to say that Pippo is based on __Servlet 3.1__ so, it needs a Servlet container to run properly.
+
 Most server-side Java applications (e.g. web or service-oriented) are intended to run within a container. 
 The traditional way to package these apps for distribution is to bundle them as a WAR file. 
 Of course you can use the above model for your application development or you can use the simple way. 
@@ -19,37 +21,89 @@ public class HelloWorld {
 
     public static void main(String[] args) {
         Pippo pippo = new Pippo();
-        pippo.GET("/", routeContext -> routeContext.send("Hello World!"));
+        pippo.GET("/", routeContext -> routeContext.send("Hello World!")); // add a route
         pippo.start();
     }
 
 }
 ```
 
+Sure, the number of lines can decrease considerable if I use variant:
+
+```java
+public class HelloWorld {
+
+    public static void main(String[] args) {
+        Pippo.send("Hello World!");
+    }
+
+}
+```
+if you consider that in first variant they are too many lines of code. 
+
 You can run _HelloWorld_ class from your IDE (or command line) as a normal (desktop) application. 
 The `default port` for embedded web server is __8338__ so open your internet browser and type `http://localhost:8338` to 
 see the result.
 
-You can change some aspects of the embedded web server using `WebServerSettings`:
+You can change some aspects (settings) of the embedded web server using:
+
+```java
+new Pippo()
+    .setPort(8081) // change port to 8081
+    .start();
+```
+
+or
 
 ```java
 Pippo pippo = new Pippo();
-pippo.getServer().getSettings().port(8081);
+
+WebServer server = pippo.getServer(); // if you want a fine tuning of the web server
+server.getSettings().port(8081);
+server.setPippoFilterPath("/pippo/*");
+
 pippo.start();
 ```
-
-In above snippet I changed programmatically the port to _8081_.
 
 Probably the best approach to specify the server port for an embedded server is via application settings.  
 Simple set the `server.port` variable from your `src\main\resources\main\conf\application.properties` with your value:
 
-```
+```properties
 # Control the port that Pippo binds
 server.port = 8081
 ```
 
-Pippo detects automatically the template engine using __ServiceLoader__.  
-Pippo comes (out of the box) with some web servers:
+Using the same `application.properties` you can change other server parameters like
+
+```properties
+# Control the network ip address Pippo binds
+# Specify 0.0.0.0 for all available interfaces
+server.host = localhost
+
+# Specify the context path of the application
+server.contextPath = /
+
+# HTTPS
+#server.keystoreFile =
+#server.keystorePassword =
+#server.truststoreFile = 
+```
+
+By default, Pippo use context path `/` (root) but you can change it using
+- `server.contextPath` property
+- programmatically
+```java
+new Pippo()
+    .setPort(8081)
+    .setFilterPath("/pippo/*") // <<<
+    .start();
+```
+
+Pippo detects automatically the web server using __ServiceLoader__.  
+If you want to use a web server in your application, you must add pippo-<server name> as dependency for your project.
+Other option is to set programmatically the desired web server using `Pippo#setServer(WebServer server)`.   
+  
+Pippo comes (out of the box) with some web servers (most popular):
 
 - [Jetty](http://eclipse.org/jetty) `pippo-jetty`
 - [Undertow](http://undertow.io) `pippo-undertow`
@@ -58,35 +112,24 @@ Pippo comes (out of the box) with some web servers:
 
 To use one of these servers just add a dependency in your project:
 
-```
+```xml
 <dependency>
-	<groupId>ro.pippo</groupId>
-	<artifactId>pippo-jetty</artifactId>
-	<version>${pippo.version}</version>
+    <groupId>ro.pippo</groupId>
+    <artifactId>pippo-jetty</artifactId>
+    <version>${pippo.version}</version>
 </dependency>
 ```
 
-If you need to create support for another embedded web server that is not implemented in Pippo or third-party modules 
-than all you need to do is to implement [WebServer]({{ site.coreurl }}/src/main/java/ro/pippo/core/WebServer.java) or to extends [AbstractWebServer]({{ site.coreurl }}/src/main/java/ro/pippo/core/AbstractWebServer.java).  
+In Pippo, the web servers are plug and play and interchangeable (you can change the web server without to change your code).
+You never work directly with classes from Jetty, Tomcat or other web server.
 
-If you want to make your embedded server plugable for Pippo than you must add `@MetaInfServices(WebServer.class)` annotation to 
-your class
-
-```java
-@MetaInfServices(WebServer.class)
-public class JettyServer extends AbstractWebServer<JettySettings> {
-
-    // attributes, methods, ...
-    
-}
-```
-
-Are some situations when the settings provided by an `WebServer` instance are not enough for you.  
+Are some situations (very rare) when the behavior provided by an `WebServer` instance supplied automatically by Pippo is not perfect.
+You want to have access to some advanced settings.   
 In these situations you need to create a custom WebServer.  
 The idea is to create a custom WebServer if you want to override some aspects (methods) of that server or
 if you want free access to the servlet container (Jetty, Tomcat, ...). 
 
-Show below the code for a `JettyServer` with persistent sessions  
+Show below an concrete example of custom `JettyServer` with persistent sessions  
 
 ```java
 public class MyJettyServer extends JettyServer {
@@ -114,15 +157,27 @@ public class MyJettyServer extends JettyServer {
 public class Main {
 
     public static void main(String[] args) {
+        // the routes are added via MyApplication class
         new Pippo(new MyApplication()).setServer(new MyJettyServer()).start();
     }
 
 }
 ```
 
-The `WebServer` abstraction allows you to add a `Servlet`, `Filter` or `ServletContextListener` in any supported servlet container
-via `addListener(Class<? extends ServletContextListener> listener)` method.  
-For the same task but more modular you can use `WebServerInitializer`.  
+The `WebServer` abstraction allows you to add a `Servlet` or a `Filter`.
+Also, `WebServer` allows you to add servlet listeners in any supported servlet container
+via `addListener(Class<? extends EventListener> listener)` method.
+The Servlet's listener supported are (the list is not complete):
+- [javax.servlet.ServletContextListener](http://docs.oracle.com/javaee/6/api/javax/servlet/ServletContextListener.html)
+- [javax.servlet.ServletContextAttributeListener](http://docs.oracle.com/javaee/6/api/javax/servlet/ServletContextAttributeListener.html)
+- [javax.servlet.ServletRequestListener](http://docs.oracle.com/javaee/6/api/javax/servlet/ServletRequestListener.html)
+- [javax.servlet.ServletRequestAttributeListener](http://docs.oracle.com/javaee/6/api/javax/servlet/ServletRequestAttributeListener.html)
+- [javax.servlet.http.HttpSessionListener](http://docs.oracle.com/javaee/6/api/javax/servlet/http.HttpSessionListener.html)
+- [javax.servlet.http.HttpSessionBindingListener](http://docs.oracle.com/javaee/6/api/javax/servlet/http/HttpSessionBindingListener.html)
+- [javax.servlet.http.HttpSessionAttributeListener](http://docs.oracle.com/javaee/6/api/javax/servlet/http/HttpSessionAttributeListener.html)
+- [javax.servlet.http.HttpSessionActivationListener](http://docs.oracle.com/javaee/6/api/javax/servlet/http/HttpSessionActivationListener.html)
+
+For the same task but using a more generic approach you can use `WebServerInitializer`.  
 Below I present you a code snippet that add a servlet to Pippo:
 
 ``` java
@@ -178,8 +233,23 @@ public class ServletDemo {
 
 }
 ```
-DON'T forget to add `@MetaInfServices` on your implementation of `WebServerInitializer`!  
+__DON'T__ forget to add `@MetaInfServices` on your implementation of `WebServerInitializer`!  
 The full code is available in [pippo-demo-servlet]({{ site.demourl }}/pippo-demo-servlet) project.
 
-A more complex demo project that shows you how to integrate [Jersey](https://jersey.java.net) is available in [pippo-demo-jersey]({{ site.demourl }}/pippo-demo-jersey) project.
+If you need to create support for another embedded web server that is not implemented in Pippo or third-party modules 
+than all you need to do is to implement [WebServer]({{ site.coreurl }}/src/main/java/ro/pippo/core/WebServer.java) or to extends [AbstractWebServer]({{ site.coreurl }}/src/main/java/ro/pippo/core/AbstractWebServer.java).  
+
+If you want to make your embedded server plugable for Pippo than you must add `@MetaInfServices(WebServer.class)` annotation to 
+your class
+
+```java
+@MetaInfServices(WebServer.class)
+public class JettyServer extends AbstractWebServer<JettySettings> {
+
+    // attributes, methods, ...
+    
+}
+```
+
+A more complex demo project that shows you how to integrate [Jersey](https://jersey.java.net) is available in [pippo-demo-jersey]({{ site.demourl }}/pippo-demo-jersey) project.  
 This demo is the code source of the article `Pippo and Jersey (JAX-RS): A Match Made in Heaven` that is availables on [DZone](https://dzone.com/articles/pippo-and-jersey-jax-rs).
