--- a/_posts/2015-03-17-server.md
+++ b/_posts/2015-03-17-server.md
@@ -9,12 +9,12 @@ order: 30
 First of all it's important to say that Pippo is based on __Servlet 3.1__ so, it needs a Servlet container to run properly.
 
 Most server-side Java applications (e.g. web or service-oriented) are intended to run within a container. 
-The traditional way to package these apps for distribution is to bundle them as a WAR file. 
-Of course you can use the above model for your application development or you can use the simple way. 
-Rather than your application being deployed to a container, an embedded container is deployed within the application itself.
+The traditional way to package these apps for distribution is to bundle them as a WAR file.   
+Of course you can use the above model for your application development or you can use the simple way.   
+Rather than your application being deployed to a container, an embedded container is deployed within the application itself.  
 Pippo comes with Jetty as embedded web server. You can choose another container if you want (for example Tomcat).
  
-See below the classic `Hello World` in Pippo using the default web server:
+See below the classic `Hello World` in Pippo:
 
 ```java
 public class HelloWorld {
@@ -100,7 +100,7 @@ new Pippo()
 ```
 
 Pippo detects automatically the web server using __ServiceLoader__.  
-If you want to use a web server in your application, you must add pippo-<server name> as dependency for your project.
+If you want to use a web server in your application, you must add `pippo-<server name>` as dependency for your project.
 Other option is to set programmatically the desired web server using `Pippo#setServer(WebServer server)`.   
   
 Pippo comes (out of the box) with some web servers (most popular):
@@ -120,10 +120,10 @@ To use one of these servers just add a dependency in your project:
 </dependency>
 ```
 
-In Pippo, the web servers are plug and play and interchangeable (you can change the web server without to change your code).
+In Pippo, the web servers are plug and play and interchangeable (you can change the web server without to change your code).  
 You never work directly with classes from Jetty, Tomcat or other web server.
 
-Are some situations (very rare) when the behavior provided by an `WebServer` instance supplied automatically by Pippo is not perfect.
+Are some situations (very rare) when the behavior provided by an `WebServer` instance supplied automatically by Pippo need fine tuning.
 You want to have access to some advanced settings.   
 In these situations you need to create a custom WebServer.  
 The idea is to create a custom WebServer if you want to override some aspects (methods) of that server or
@@ -233,7 +233,7 @@ public class ServletDemo {
 
 }
 ```
-__DON'T__ forget to add `@MetaInfServices` on your implementation of `WebServerInitializer`!  
+__DON'T__ forget to add `@MetaInfServices` on your implementation of `WebServerInitializer`! This annotation generates `META-INF/services` files automatically.  
 The full code is available in [pippo-demo-servlet]({{ site.demourl }}/pippo-demo-servlet) project.
 
 If you need to create support for another embedded web server that is not implemented in Pippo or third-party modules 
