Small improvement in HelloWorld section

--- a/_posts/2015-03-17-server.md
+++ b/_posts/2015-03-17-server.md
@@ -28,7 +28,7 @@ public class HelloWorld {
 }
 ```
 
-Sure, the number of lines can decrease considerable if I use variant:
+Sure, the number of lines can decrease considerable if you use variant:
 
 ```java
 public class HelloWorld {
