--- a/_posts/2015-05-05-routes.md
+++ b/_posts/2015-05-05-routes.md
@@ -25,8 +25,8 @@ GET("/", new RouteHandler() {
 GET("/", routeContext -> routeContext.send("Hello World"));
 ```
 
-Routes in Pippo are created using methods named after HTTP verbs. For instance, in the previous example, we created a route to handle GET requests to the root of the website. You have a corresponding method in Application for all commonly used HTTP verbs (__GET__, __POST__, __DELETE__, __HEAD__, __PUT__, __PATCH__, __CONNECT__ and __OPTIONS__). For a basic website, only GET and POST are likely to be used.
-Pippo comes with a "pseudo" verb `ANY` that meant the route applied to all HTTP methods/verbs.
+Routes in Pippo are created using methods named after HTTP verbs. For instance, in the previous example, we created a route to handle GET requests to the root of the website. You have a corresponding method in Application for all commonly used HTTP verbs (__GET__, __POST__, __DELETE__, __HEAD__, __PUT__, __PATCH__, __CONNECT__ and __OPTIONS__). For a basic website, only GET and POST are likely to be used.  
+Pippo comes with a "pseudo" verb `ANY` that meant the route applied to any HTTP methods/verbs.
 ```java
 ANY("/example", new CSRFHandler());
 ```
@@ -83,7 +83,7 @@ If we add a route as in the below example
 ```java
 GET("/test", routeContext -> routeContext.send("Test"));
 ```
-and we type `localhost/test/` in browser we will se that the result is 404 (not found) http code.
+and we type `localhost/test/` in browser we will see that the result is 404 (not found) http code.
 Of course that `localhost/test` works OK. Explanation for 404 on `localhost/test/` is that we registered a route 
 only for `/test` path.
 To obtain the same result for both urls (with and without `\` character at end) we will use `TrailingSlashHandler` (as before filter)
