Improve Guice section

--- a/_posts/2015-05-27-guice.md
+++ b/_posts/2015-05-27-guice.md
@@ -6,8 +6,12 @@ date: 2015-05-27 15:27:38
 order: 15
 ---
 
-Pippo can be used together with the [Guice](https://github.com/google/guice), using Guice as a dependency injection container.  
-When Pippo creates new instances of your various `Controller` subclasses it delegates the instance creation to a `ControllerFactory`.
+This page is valid in the context of [Controller](/mod/controller.htm)s.  
+Also, this page focuses on using `Guice` to inject dependencies in Pippo and not using Pippo as a dependency in an existing application.
+If you want to add Pippo (web layer) as dependency in an already existing Guice application, please see [this](https://github.com/pippo-java/pippo/issues/369) text.  
+
+Pippo can be used together with the [Guice](https://github.com/google/guice), using Guice as a dependency injection container.    
+When Pippo creates new instances of your various `Controller` subclasses it delegates the instance creation to a `ControllerFactory`.  
 The module [pippo-guice]({{ site.codeurl }}/pippo-controller-parent/pippo-guice) contains [GuiceControllerFactory]({{ site.codeurl }}/pippo-controller-parent/pippo-guice/src/main/java/ro/pippo/guice/GuiceControllerFactory.java) that it's 
 a `ControllerFactory` implementation that delegates to the Guice container to instantiate a given `Controller` class. This allows for the instance to be configured via dependency injection.
 
