--- a/_posts/2015-05-27-guice.md
+++ b/_posts/2015-05-27-guice.md
@@ -6,7 +6,7 @@ date: 2015-05-27 15:27:38
 order: 15
 ---
 
-This page is valid in the context of [Controller](/mod/controller.htm)s.  
+This page is valid in the context of [Controller](/mod/controller.html)s.  
 Also, this page focuses on using `Guice` to inject dependencies in Pippo and not using Pippo as a dependency in an existing application.
 If you want to add Pippo (web layer) as dependency in an already existing Guice application, please see [this](https://github.com/pippo-java/pippo/issues/369) text.  
 
