feat(server): add server settings section
* This section describes in brief, supported server settings for
 different servers.
* For detailed description, users should refer official documentation
  of each server(links have been provided)

--- a/_posts/2015-03-17-server.md
+++ b/_posts/2015-03-17-server.md
@@ -253,3 +253,46 @@ public class JettyServer extends AbstractWebServer<JettySettings> {
 
 A more complex demo project that shows you how to integrate [Jersey](https://jersey.java.net) is available in [pippo-demo-jersey]({{ site.demourl }}/pippo-demo-jersey) project.  
 This demo is the code source of the article `Pippo and Jersey (JAX-RS): A Match Made in Heaven` that is availables on [DZone](https://dzone.com/articles/pippo-and-jersey-jax-rs).
+
+### Server Settings
+
+Different Server settings can be added via `application.properties`. Below are the settings that are supported:
+
+#### Jetty
+
+Currently, `jetty.maxThreads`, `jetty.minThreads` and `jetty.idleTimeout` can be passed in `application.properties`.
+* `jetty.maxThreads` - maximum number of threads to be allocated with default value `200`
+* `jetty.minThreads` - minimum number of threads to be allocated with default value `8`
+* `jetty.idleTimeout` - idle timeout for each thread before it is stopped with default value `30000`
+
+> Note: Only when valid maxThreads is passed then, minThreads and idleTimeouts are consumed. In other cases, default values are used
+
+For Detailed description about these settings, please refer [here](http://eclipse.org/jetty)
+
+#### Undertow
+
+Currently, Pippo supports all `UndertowOptions`. UndertowOptions can be categorized into 3 subcategories.
+* Server Options - All the server options specified must start with `undertow.server.`
+* Worker Options - All the worker options specified must start with `undertow.worker.`
+* Socket Options - All the worker options specified must start with `undertow.socket.`
+
+Along with these configurations, all other supported settings are mentioned below:
+* `undetow.ioThreads` - Number of IO threads that needs to be allocated
+* `undertow.workerThreads` - Number of worker threads that needs to be allocated
+* `undertow.bufferSize`, `undertow.buffersPerRegion` and `undertow.directBuffers` are the other supported settings.
+
+For Detailed description about these settings, please refer [here](http://undertow.io)
+
+Sample properties file with undertow settings
+```properties
+undertow.ioThreads=8
+undertow.workerThreads=64
+
+undertow.server.NO_REQUEST_TIMEOUT=20000
+undertow.socket.TCP_NODELAY=true
+```
+
+#### Tomcat
+
+Currently, `tomcat.clientAuth`, `tomcat.maxConnections`, `tomcat.baseFolder`, `tomcat.keyAlias` and `tomcat.keyType` can be passed in `application.properties`
+For Detailed description about these settings, please refer [here](http://tomcat.apache.org)
