fix typo in filters documentation

--- a/_posts/2015-06-18-filters.md
+++ b/_posts/2015-06-18-filters.md
@@ -57,7 +57,7 @@ POST("/{id}", routeContext -> {
 
 // after filter that release the database instance
 ANY("/.*", routeContext -> {
-    Database database = routeContextremoveLocal("database");
+    Database database = routeContext.removeLocal("database");
     database.release();
 }).runAsFinally(); 
 ```
